--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             />
           </div>
           <div
-            class="flex flex-col mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16"
+            class="flex flex-col mx-auto mt-16 mb-24 space-y-12 text-xl md:w-1/2 md:mb-60 md:text-left md:pl-16"
           >
             <div>
               <h5>Quick Search</h5>
